@@ -114,10 +114,10 @@ l_ldap_set_option(PyObject* self, PyObject *args)
 
     if (!PyArg_ParseTuple(args, "iO:set_option", &option, &value))
 	return NULL;
-    if (LDAP_set_option(NULL, option, value) == -1)
+    if (!LDAP_set_option(NULL, option, value))
 	return NULL;
     Py_INCREF(Py_None);
-	return Py_None;
+    return Py_None;
 }
 
 /* ldap_get_option (global options) */
